# vtk-m

./: .gitlab-ci-olcf.yml  .gitlab-ci.yml  vktm
.gitlab/ci/: CMakeCache.txt.ascent-gcc-smpi-cuda  ascent.yml  ctest_test.cmake  doxygen.yml  ubuntu1604.yml  ubuntu2004.yml  windows10.yml
CMake/: VTKmCompilerFlags.cmake  VTKmDeviceAdapters.cmake  VTKmWrappers.cmake
CMake/testing/: VTKmCheckSourceInInstall.cmake
benchmarking/: BenchmarkDeviceAdapter.cxx  BenchmarkFilters.cxx  BenchmarkInSitu.cxx  BenchmarkLocators.cxx  BenchmarkODEIntegrators.cxx  BenchmarkRayTracing.cxx  CMakeLists.txt
docs/: CI-README.md  FilterRedesign.md
docs/changelog/: flow-filter-communication.md  lambda-arrays.md  lambda-cont-exec.md  lambda-implicit-array.md  remove-invocation.md  uncertain-subsample.md  vec-constexpr.md
docs/users-guide/: flow-template-locator.md
examples/: CMakeLists.txt
examples/HTG/: hyperTreeGridCont.h  hyperTreeGridExec.h
examples/clipping/: Clipping.cxx
examples/contour_tree_distributed/: ContourTreeApp.cxx  ContourTreeAppDataIO.h
examples/cosmotools/: CMakeLists.txt
examples/demo/: Demo.cxx
examples/dormand_prince/: CMakeLists.txt  Lorenz.cxx  vanderPolOscillator.cxx
examples/heat_diffusion/: CMakeLists.txt  Diffusion.cxx  Diffusion.hpp  Diffusion_Filter.h  HeatEquation.h  InitalCondition.cpp  InitalCondition.h  hd_worklets.h  heat_diffusion.cxx  main.cxx  parameters.cpp  parameters.h  test_result_rectangle_height_data  test_result_rectangle_width_data
examples/heat_diffusion/Tests/: test_result_rectangle_height.cxx  test_result_rectangle_width.cxx  test_result_square.cxx  test_result_square_data.txt
examples/hello_worklet/: HelloWorklet.cxx
examples/histogram/: HistogramMPI.hxx
examples/multi_backend/: MultiDeviceGradient.hxx
examples/particle_advection/: ParticleAdvection.cxx
examples/polyline_archimedean_helix/: CMakeLists.txt
examples/streamline_mpi/: StreamlineMPI.cxx
examples/temporal_advection/: TemporalAdvection.cxx
examples/tetrahedra/: Tetrahedralize.cxx  Triangulate.cxx
tutorial/: CMakeLists.txt  contour.cxx  fiber_multi_var.cxx  fiber_surface_uncertainty.cxx
tutorial/data/: skull.vtk
vtkm/: CellShape.h  CellTraits.h  Deprecated.h  ErrorCode.h  List.h  Particle.h  Tuple.h  Tuple.h.in  Types.h  VecFromPortalPermute.h
vtkm/cont/: AmrDataSet.cxx  AmrDataSet.h  ArrayGetValues.h  ArrayHandleCast.h  ArrayHandleImplicit.h  ArrayHandleIsMonotonic.h  ArrayHandleIsMonotonic.hxx  ArrayHandleMultiplexer.h  ArrayHandlePermutation.h  ArrayHandleRandomBernoulli.h  ArrayHandleTransform.h  CMakeLists.txt  CellLocatorBoundingIntervalHierarchy.cxx  CellLocatorBoundingIntervalHierarchy.h  CellLocatorChooser.h  CellLocatorGeneral.cxx  CellLocatorGeneral.h  CellLocatorRectilinearGrid.cxx  CellLocatorRectilinearGrid.h  CellLocatorTwoLevel.cxx  CellLocatorTwoLevel.h  CellLocatorUniformGrid.cxx  CellSet.h  CellSetExplicit.hxx  CellSetExtrude.h  CellSetStructured.h  CubicHermiteSpline.cxx  (+8 more)
vtkm/filter/CleanGrid/: CMakeLists.txt  CleanGrid.cxx  CleanGrid.h
vtkm/filter/CleanGrid/testing/: CMakeLists.txt  UnitTestCleanGrid.cxx
vtkm/filter/CleanGrid/worklet/: CMakeLists.txt  PointMerge.h
vtkm/filter/Contour/: CMakeLists.txt  ClipWithField.cxx  ClipWithField.h  Contour.cxx  Contour.h  Instantiations.cxx  Slice.cxx  Slice.h
vtkm/filter/Contour/testing/: CMakeLists.txt  RegressionTestContourFilter.cxx  RegressionTestSliceFilter.cxx  UnitTestClipWithFieldFilter.cxx  UnitTestContourFilter.cxx  UnitTestContourFilterNormals.cxx
vtkm/filter/Contour/worklet/: CMakeLists.txt  Clip.h  Contour.h  FlyingEdges.h  FlyingEdgesPass1.h  FlyingEdgesPass2.h  FlyingEdgesPass4.h  FlyingEdgesPass4Common.h  FlyingEdgesPass4X.h  FlyingEdgesPass4XWithNormals.h  FlyingEdgesPass4Y.h  FlyingEdgesTables.h  MarchingCells.h
vtkm/filter/DensityEstimate/: CMakeLists.txt  Histogram.cxx  Histogram.h
vtkm/filter/DensityEstimate/testing/: CMakeLists.txt  UnitTestHistogramFilter.cxx  UnitTestPartitionedDataSetHistogramFilter.cxx
vtkm/filter/EntityExtraction/: CMakeLists.txt  ExternalFaces.cxx  ExternalFaces.h
vtkm/filter/EntityExtraction/testing/: CMakeLists.txt  UnitTestExternalFacesFilter.cxx
vtkm/filter/EntityExtraction/worklet/: CMakeLists.txt
vtkm/filter/GeometryGeneration/: CMakeLists.txt  Tetrahedralize.cxx  Tetrahedralize.h
vtkm/filter/GeometryGeneration/testing/: CMakeLists.txt  UnitTestTetrahedralizeFilter.cxx
vtkm/filter/GeometryGeneration/worklet/: CMakeLists.txt  Tetrahedralize.h
vtkm/filter/GeometryGeneration/worklet/tetrahedralize/: CMakeLists.txt
vtkm/filter/ImageProcessing/: CMakeLists.txt  ImageDifference.cxx  ImageDifference.h
vtkm/filter/ImageProcessing/testing/: CMakeLists.txt  UnitTestImageDifferenceFilter.cxx
vtkm/filter/ImageProcessing/worklet/: CMakeLists.txt
vtkm/filter/VectorCalculus/: CMakeLists.txt  DotProduct.cxx  DotProduct.h  Gradient.cxx  Gradient.h
vtkm/filter/VectorCalculus/testing/: CMakeLists.txt  UnitTestDotProductFilter.cxx  UnitTestGradientExplicit.cxx  UnitTestGradientUniform.cxx
vtkm/filter/VectorCalculus/worklet/: CMakeLists.txt  Gradient.h
vtkm/filter/VectorCalculus/worklet/gradient/: CellGradient.h  GradientOutput.h  PointGradient.h  StructuredPointGradient.h
vtkm/filter/particle_advection/: AdvectorBaseAlgorithm.h  AdvectorBaseAlgorithm.hxx  AdvectorBaseThreadedAlgorithm.h  BoundsMap.h  CMakeLists.txt  DataSetIntegrator.cxx  DataSetIntegrator.h  Messenger.cxx  Messenger.h  ParticleAdvection.cxx  ParticleAdvection.h  ParticleAdvectionAlgorithm.h  ParticleMessenger.cxx  ParticleMessenger.h  PathParticle.cxx  PathParticle.h  Pathline.cxx  Pathline.h  Streamline.cxx  Streamline.h
vtkm/filter/particle_advection/testing/: CMakeLists.txt  RegressionTestStreamline.cxx  UnitTestStreamlineFilter.cxx  UnitTestStreamlineFilterMPI.cxx
vtkm/filter/particle_advection/worklet/: EulerIntegrator.h  Field.h  GridEvaluatorStatus.h  GridEvaluators.h  IntegratorStatus.h  ParticleAdvection.h  ParticleAdvectionWorklets.h  Particles.h  RK4Integrator.h  Stepper.h  TemporalGridEvaluators.h
vtkmstd/: is_trivial.h
(+441 files in other folders)
